--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,20 @@
     "homepage": "https://cakephp.org",
     "type": "project",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/itosho/idol-ec-constants-php"
+        }
+    ],
     "require": {
         "php": ">=5.6",
         "cakephp/cakephp": "3.5.*",
         "mobiledetect/mobiledetectlib": "2.*",
         "cakephp/migrations": "~1.0",
         "cakephp/plugin-installer": "~1.0",
-        "josegonzalez/dotenv": "2.*"
+        "josegonzalez/dotenv": "2.*",
+        "itosho/idol-ec-constants-php": "dev-master"
     },
     "require-dev": {
         "psy/psysh": "@stable",
